Minor fixes for the fixtures code ready for release